there's a metric endpoint: https://pokeapi.huangtechhub.dev/metrics
